Fixed alignment of logo

--- a/style.css
+++ b/style.css
@@ -61,6 +61,10 @@ th {
   flex-flow: column;
 }
 
+.logo-large {
+    margin-left: -1.5em;
+}
+
 @media (max-width: 800px) {
   .logo-small {
     display: none;
@@ -74,7 +78,7 @@ th {
 
   .logo-large {
   display: none;
-  margin-left: -1.5em;
+
 }
 
   .navigation {
